mesa (24.0.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 15 Feb 2024 09:25:48 +0200

mesa (24.0.0-2) experimental; urgency=medium

  * clc-build-fix.diff: Attempt to fix a regression that made requiring
    llvmspirvlib mandatory.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 08 Feb 2024 17:20:59 +0200

mesa (24.0.0-1) experimental; urgency=medium

  * New upstream release. (Closes: #1059782)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 01 Feb 2024 09:34:09 +0200

mesa (24.0.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.
  * patches: Attempt to fix failing autopkgtests by changing zink init
    failure logging to a warning instead of an error.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Jan 2024 15:53:42 +0200

mesa (24.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 18 Jan 2024 10:42:01 +0200

mesa (24.0.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate.
  * patches: Drop the zink reverts.
  * rules: Modify video-codecs option to build all codecs. Thanks,
    Safir Secerovic!
  * control, rules: Bump debhelper-compat to 13, drop dh_missing
    override as it's the default now.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 16 Jan 2024 19:15:45 +0200

mesa (23.3.5-1) unstable; urgency=medium

  * New upstream release.
  * patches: Drop zink reverts, gtk4 autopkgtest got fixed.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 01 Feb 2024 09:20:35 +0200

mesa (23.3.4-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Jan 2024 15:41:39 +0200

mesa (23.3.3-3) unstable; urgency=medium

  * rules: Drop mips64el from RUSTICL_ARCHS too, which would pull llvm-
    spirv-17. (Closes: #1060779)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 18 Jan 2024 09:55:40 +0200

mesa (23.3.3-2) unstable; urgency=medium
