@@ -1,6 +1,7 @@
 mesa (24.0.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * clc-build-fix.diff: Updated.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Thu, 15 Feb 2024 09:25:48 +0200
 
